white space scroll bug fixed

--- a/src/containers/HomePage/TournamentPage/TournamentContentSection/Footer/Footer.scss
+++ b/src/containers/HomePage/TournamentPage/TournamentContentSection/Footer/Footer.scss
@@ -1,28 +1,30 @@
 .tournament-content-footer-wrapper {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    height: 4rem;
-    align-items: center;
-    justify-content: center;
-    .tournament-content-input {
-        background: rgba($color: #000000, $alpha: 0.05);
-        direction: ltr;
-        display: block;
-        max-width: 12rem;
-        width: 50%;
-        padding: 0.5rem 1.5rem;
-        font-size: 1.1rem;
-        font-weight: 500;
-        color: black;
-        border-radius: 25px;
-        border: solid 1px rgba($color: #000000, $alpha: 0.15);
-        transition: box-shadow 0.15s ease-in-out;
-        outline: none;
-        margin-left: 1rem;
-    }
-    .wide-input{
-        width: 60%;
-        max-width: 25rem;
-    }
+	position: absolute;
+	bottom: 30px;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	height: 4rem;
+	align-items: center;
+	justify-content: center;
+	.tournament-content-input {
+		background: rgba($color: #000000, $alpha: 0.05);
+		direction: ltr;
+		display: block;
+		max-width: 12rem;
+		width: 50%;
+		padding: 0.5rem 1.5rem;
+		font-size: 1.1rem;
+		font-weight: 500;
+		color: black;
+		border-radius: 25px;
+		border: solid 1px rgba($color: #000000, $alpha: 0.15);
+		transition: box-shadow 0.15s ease-in-out;
+		outline: none;
+		margin-left: 1rem;
+	}
+	.wide-input {
+		width: 60%;
+		max-width: 25rem;
+	}
 }
